[package]
name = "zohoxide-crm"
version = "0.4.4"
description = "Library to help interact with v2 of the Zoho CRM API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vinchona/zohoxide-crm"
homepage = "https://github.com/vinchona/zohoxide-crm"
documentation = "https://docs.rs/zohoxide-crm/0.4.4/zohoxide_crm"
authors = ["rideron89", "vinchona"]
edition = "2021"
keywords = ["zoho"]

# files to include in the upload to crates.io
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
typed-builder = "0.23.2"

[dev-dependencies]
mockito = "1.7.1"
